styles.css
/* GENERAL STYLING */

:root {
    --spaceCadetColor: #2C2A4A;
    --isabellineColor: #F2E9E4;
    --bittersweetColor: #FF6B6B;
    --darkPurpleColor: #1B182E;
}

*, ::before, ::after {
    margin: 0;
    padding: 0;

    box-sizing: border-box;
}

body {
    height: 100vh;
    width: 100%;

    background-color: var(--spaceCadetColor);

    font-family: 'Balsamiq Sans', cursive;

    display: flex;
    flex-direction: column;
}

button {
    cursor: pointer;

    font-family: 'Balsamiq Sans', cursive;
}

/* HEADER STYLING */

#title {
    font-family: 'Carter One', cursive;
    font-size: 5rem;

    text-align: center;

    color: var(--isabellineColor);
}

/* MAIN STYLING */

main {
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* WINNING MESSAGE STYLING */

#winning-message {
    display: none;
}

#winning-message.show {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 16px;

    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;

    background-color: #00000096;
    color: var(--isabellineColor);

    font-size: 5rem;
}

#new-game-button {
    font-size: 2.5rem;
    
    padding: 8px 24px;

    transition: all 0.3s linear;
}

#new-game-button:hover {
    transform:translateY(12px)
}

/* FORM STYLING */
.playerNames {
    color: var(--isabellineColor);

    font-size: 1.3rem;

    margin-bottom: 12px;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 12px;
}

.firstName, .secondName {
    display: flex;
    flex-direction: column;
    align-items: center;
}

label {
    margin-bottom: 8px;
    transition: all 0.2s ease-in-out;
}

label:hover {
    color: var(--bittersweetColor);
}

input[type="text"] {
    appearance: none;
    outline: none;
    border: 2px solid black;

    background-color: var(--darkPurpleColor);
    color: var(--isabellineColor);

    font-size: 1.1rem;
    
    transition: all 0.2s linear;

    padding: 3px;
}

input[type="text"]:focus {
    transform:scale(1.03);
}

/* START GAME BUTTON STYLING */
#startGameButton {
    margin-bottom: 12px;
    
    font-size: 1.5rem;
    font-weight: 500;

    padding: 4px 24px;

    border: 2px solid black;
    border-radius: 4px;

    background-color: var(--darkPurpleColor);
    color: var(--isabellineColor);

    transition: transform 0.05s linear;
    transition: color 0.2s linear;
}

#startGameButton:active {
    transform: scale(1.1);
}

#startGameButton:hover {
    color: var(--bittersweetColor);
}

/* CURRENT TURN MESSAGE STYLING */
#current-turn-message {
    font-size: 1.8rem;

    height: 35px;

    color: var(--isabellineColor);

    margin-bottom: 12px;

    transition: all 0.3s linear;
}

/* GAMEBOARD STYLING */

#gameboard {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 12px;

    height: 450px;
    width: 450px;
}

.gameboard-cell {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: var(--darkPurpleColor);

    color: var(--isabellineColor);

    font-family: Arial, Helvetica, sans-serif;
    font-size: 7rem;
    font-weight: 900;

    border: 6px solid black;
    border-radius: 6px;

    transition: all 0.1s ease-in-out;
}

.gameboard-cell:hover {
    transform: scale(1.1, 1.1);
    
    color: var(--bittersweetColor);
}

/* FOOTER STYLING */

footer {
    color: var(--isabellineColor);

    text-align: center;

    font-size: 1.2rem;
    margin-top: auto;

    padding: 24px;
    height: 72px;
}

footer a {
    font-weight: 700;

    color: var(--isabellineColor);

    text-decoration: none;
    
    transition: all 0.3s linear;
}

footer a:hover {
    color: var(--bittersweetColor);
}

/* MEDIA QUERIES */

@media all and (max-width: 500px) {
    #title {
        font-size: 4rem;
    }

    #winning-message-text {
        font-size: 2.8rem;
    }

    .playerNames {
        font-size: 1.1rem;
    }

    #new-game-button {
        font-size: 1.5rem;
    }

    #current-turn-message {
        font-size: 1.5rem;
    }

    #gameboard {
        height: 300px;
        width: 300px;
        gap: 8px;
    }

    .gameboard-cell {
        border: 5px solid black;
        font-size: 4.5rem;
    }

    footer {
        font-size: 1rem;
    }

    
}

